deploy: 6b52fb1d8d37d1f79ed819e24286293d9da562a1

--- a/method_list.html
+++ b/method_list.html
@@ -430,13 +430,21 @@
 
   <li class="odd ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/MissingPrimitiveUnitError.html#initialize-instance_method" title="UnitMeasurements::MissingPrimitiveUnitError#initialize (method)">#initialize</a></span>
+      <small>UnitMeasurements::MissingPrimitiveUnitError</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/PrimitiveUnitAlreadySetError.html#initialize-instance_method" title="UnitMeasurements::PrimitiveUnitAlreadySetError#initialize (method)">#initialize</a></span>
       <small>UnitMeasurements::PrimitiveUnitAlreadySetError</small>
     </div>
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#inspect-instance_method" title="UnitMeasurements::Unit#inspect (method)">#inspect</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -444,7 +452,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#inspect-instance_method" title="UnitMeasurements::Measurement#inspect (method)">#inspect</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -452,7 +460,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Cache.html#load_cache-instance_method" title="UnitMeasurements::Cache#load_cache (method)">#load_cache</a></span>
       <small>UnitMeasurements::Cache</small>
@@ -460,7 +468,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#name-instance_method" title="UnitMeasurements::Unit#name (method)">#name</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -468,7 +476,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#names-instance_method" title="UnitMeasurements::Unit#names (method)">#names</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -476,7 +484,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Arithmetic.html#nonzero%3F-instance_method" title="UnitMeasurements::Arithmetic#nonzero? (method)">#nonzero?</a></span>
       <small>UnitMeasurements::Arithmetic</small>
@@ -484,7 +492,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Normalizer.html#normalize-class_method" title="UnitMeasurements::Normalizer.normalize (method)">normalize</a></span>
       <small>UnitMeasurements::Normalizer</small>
@@ -492,7 +500,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse-class_method" title="UnitMeasurements::Parser.parse (method)">parse</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -500,7 +508,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#parse-class_method" title="UnitMeasurements::Measurement.parse (method)">parse</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -508,7 +516,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse_complex-class_method" title="UnitMeasurements::Parser.parse_complex (method)">parse_complex</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -516,7 +524,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse_rational-class_method" title="UnitMeasurements::Parser.parse_rational (method)">parse_rational</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -524,7 +532,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Parser.html#parse_scientific-class_method" title="UnitMeasurements::Parser.parse_scientific (method)">parse_scientific</a></span>
       <small>UnitMeasurements::Parser</small>
@@ -532,7 +540,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#parse_value-instance_method" title="UnitMeasurements::Unit#parse_value (method)">#parse_value</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -540,7 +548,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#primitive-instance_method" title="UnitMeasurements::UnitGroup#primitive (method)">#primitive</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -548,7 +556,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#primitive-instance_method" title="UnitMeasurements::UnitGroupBuilder#primitive (method)">#primitive</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -556,7 +564,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#quantity-instance_method" title="UnitMeasurements::Measurement#quantity (method)">#quantity</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -564,7 +572,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#ratio-class_method" title="UnitMeasurements::Measurement.ratio (method)">ratio</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -572,7 +580,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements.html#reset-class_method" title="UnitMeasurements.reset (method)">reset</a></span>
       <small>UnitMeasurements</small>
@@ -580,7 +588,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Math.html#round-instance_method" title="UnitMeasurements::Math#round (method)">#round</a></span>
       <small>UnitMeasurements::Math</small>
@@ -588,7 +596,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Cache.html#set-instance_method" title="UnitMeasurements::Cache#set (method)">#set</a></span>
       <small>UnitMeasurements::Cache</small>
@@ -596,7 +604,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#si_unit-instance_method" title="UnitMeasurements::UnitGroupBuilder#si_unit (method)">#si_unit</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -604,7 +612,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Cache.html#store_cache-instance_method" title="UnitMeasurements::Cache#store_cache (method)">#store_cache</a></span>
       <small>UnitMeasurements::Cache</small>
@@ -612,7 +620,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/ParseError.html#string-instance_method" title="UnitMeasurements::ParseError#string (method)">#string</a></span>
       <small>UnitMeasurements::ParseError</small>
@@ -620,7 +628,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#system-instance_method" title="UnitMeasurements::Unit#system (method)">#system</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -628,7 +636,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#system-instance_method" title="UnitMeasurements::UnitGroupBuilder#system (method)">#system</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -636,7 +644,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#systems-instance_method" title="UnitMeasurements::UnitGroup#systems (method)">#systems</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -644,7 +652,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_c-instance_method" title="UnitMeasurements::Conversion#to_c (method)">#to_c</a></span>
       <small>UnitMeasurements::Conversion</small>
@@ -652,7 +660,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_d-instance_method" title="UnitMeasurements::Conversion#to_d (method)">#to_d</a></span>
       <small>UnitMeasurements::Conversion</small>
@@ -660,7 +668,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_f-instance_method" title="UnitMeasurements::Conversion#to_f (method)">#to_f</a></span>
       <small>UnitMeasurements::Conversion</small>
@@ -668,7 +676,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Formatter.html#to_fs-instance_method" title="UnitMeasurements::Formatter#to_fs (method)">#to_fs</a></span>
       <small>UnitMeasurements::Formatter</small>
@@ -676,7 +684,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_i-instance_method" title="UnitMeasurements::Conversion#to_i (method)">#to_i</a></span>
       <small>UnitMeasurements::Conversion</small>
@@ -684,7 +692,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Conversion.html#to_r-instance_method" title="UnitMeasurements::Conversion#to_r (method)">#to_r</a></span>
       <small>UnitMeasurements::Conversion</small>
@@ -692,7 +700,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#to_s-instance_method" title="UnitMeasurements::Unit#to_s (method)">#to_s</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -700,7 +708,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#to_s-instance_method" title="UnitMeasurements::Measurement#to_s (method)">#to_s</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -708,7 +716,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#unit-instance_method" title="UnitMeasurements::Measurement#unit (method)">#unit</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -716,7 +724,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitError.html#unit-instance_method" title="UnitMeasurements::UnitError#unit (method)">#unit</a></span>
       <small>UnitMeasurements::UnitError</small>
@@ -724,7 +732,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#unit-instance_method" title="UnitMeasurements::UnitGroupBuilder#unit (method)">#unit</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -732,7 +740,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitAlreadyDefinedError.html#unit-instance_method" title="UnitMeasurements::UnitAlreadyDefinedError#unit (method)">#unit</a></span>
       <small>UnitMeasurements::UnitAlreadyDefinedError</small>
@@ -740,7 +748,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_for-instance_method" title="UnitMeasurements::UnitGroup#unit_for (method)">#unit_for</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -748,7 +756,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_for!-instance_method" title="UnitMeasurements::UnitGroup#unit_for! (method)">#unit_for!</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -756,7 +764,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#unit_from_unit_or_name!-instance_method" title="UnitMeasurements::Measurement#unit_from_unit_or_name! (method)">#unit_from_unit_or_name!</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -764,7 +772,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#unit_group-instance_method" title="UnitMeasurements::Unit#unit_group (method)">#unit_group</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -772,7 +780,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Measurement.html#unit_group-class_method" title="UnitMeasurements::Measurement.unit_group (method)">unit_group</a></span>
       <small>UnitMeasurements::Measurement</small>
@@ -780,7 +788,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_name_to_unit-instance_method" title="UnitMeasurements::UnitGroup#unit_name_to_unit (method)">#unit_name_to_unit</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -788,7 +796,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_names-instance_method" title="UnitMeasurements::UnitGroup#unit_names (method)">#unit_names</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -796,7 +804,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_names_with_aliases-instance_method" title="UnitMeasurements::UnitGroup#unit_names_with_aliases (method)">#unit_names_with_aliases</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -804,7 +812,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_or_alias%3F-instance_method" title="UnitMeasurements::UnitGroup#unit_or_alias? (method)">#unit_or_alias?</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -812,7 +820,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#unit_with_name_and_aliases-instance_method" title="UnitMeasurements::UnitGroup#unit_with_name_and_aliases (method)">#unit_with_name_and_aliases</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -820,7 +828,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units-instance_method" title="UnitMeasurements::UnitGroup#units (method)">#units</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -828,7 +836,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroupBuilder.html#units-instance_method" title="UnitMeasurements::UnitGroupBuilder#units (method)">#units</a></span>
       <small>UnitMeasurements::UnitGroupBuilder</small>
@@ -836,7 +844,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units_for-instance_method" title="UnitMeasurements::UnitGroup#units_for (method)">#units_for</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -844,7 +852,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#units_for!-instance_method" title="UnitMeasurements::UnitGroup#units_for! (method)">#units_for!</a></span>
       <small>UnitMeasurements::UnitGroup</small>
@@ -852,7 +860,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Configuration.html#use_cache-instance_method" title="UnitMeasurements::Configuration#use_cache (method)">#use_cache</a></span>
       <small>UnitMeasurements::Configuration</small>
@@ -860,7 +868,7 @@
   </li>
   
 
-  <li class="odd ">
+  <li class="even ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#value-instance_method" title="UnitMeasurements::Unit#value (method)">#value</a></span>
       <small>UnitMeasurements::Unit</small>
@@ -868,7 +876,7 @@
   </li>
   
 
-  <li class="even ">
+  <li class="odd ">
     <div class="item">
       <span class='object_link'><a href="UnitMeasurements/Unit.html#with-instance_method" title="UnitMeasurements::Unit#with (method)">#with</a></span>
       <small>UnitMeasurements::Unit</small>
