deploy: 12e56f5e73f548da97f41f600481cef6b020c684

--- a/method_list.html
+++ b/method_list.html
@@ -310,6 +310,22 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/NumericMethods.html#define_numeric_method_for-class_method" title="UnitMeasurements::NumericMethods.define_numeric_method_for (method)">define_numeric_method_for</a></span>
+      <small>UnitMeasurements::NumericMethods</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/NumericMethods.html#define_numeric_methods-class_method" title="UnitMeasurements::NumericMethods.define_numeric_methods (method)">define_numeric_methods</a></span>
+      <small>UnitMeasurements::NumericMethods</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/UnitGroup.html#defined%3F-instance_method" title="UnitMeasurements::UnitGroup#defined? (method)">#defined?</a></span>
       <small>UnitMeasurements::UnitGroup</small>
     </div>
