deploy: 41c161846fe36d9e8421eba75db249644c078a71

--- a/method_list.html
+++ b/method_list.html
@@ -310,6 +310,22 @@
 
   <li class="even ">
     <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/ConversionMethods.html#define_conversion_method_for-class_method" title="UnitMeasurements::ConversionMethods.define_conversion_method_for (method)">define_conversion_method_for</a></span>
+      <small>UnitMeasurements::ConversionMethods</small>
+    </div>
+  </li>
+  
+
+  <li class="odd ">
+    <div class="item">
+      <span class='object_link'><a href="UnitMeasurements/ConversionMethods.html#define_conversion_methods-class_method" title="UnitMeasurements::ConversionMethods.define_conversion_methods (method)">define_conversion_methods</a></span>
+      <small>UnitMeasurements::ConversionMethods</small>
+    </div>
+  </li>
+  
+
+  <li class="even ">
+    <div class="item">
       <span class='object_link'><a href="UnitMeasurements/NumericMethods.html#define_numeric_method_for-class_method" title="UnitMeasurements::NumericMethods.define_numeric_method_for (method)">define_numeric_method_for</a></span>
       <small>UnitMeasurements::NumericMethods</small>
     </div>
